added test cases for syncdata and hotlist and removed unused imports
Signed-off-by: GOKULRAJ136 <110164849+GOKULRAJ136@users.noreply.github.com>